dash/backend/src/gatekeeper-templates/general/httpsonly/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8shttpsonly
  annotations:
    description: Requires Ingress resources to be HTTPS only; TLS configuration should
      be set and `kubernetes.io/ingress.allow-http` annotation equals false.
    minesweeper.io/exceptions: "true"
    minesweeper.io/apiGroup: "extensions, networking.k8s.io"
    minesweeper.io/kinds: "Ingress"

spec:
  crd:
    spec:
      names:
        kind: K8sHttpsOnly
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8shttpsonly

        m9s_exception_pod(pod) = result {
          x :=
          [
          # START M9S EXCEPTION BLOCK 1#
           true
          # END M9S EXCEPTION BLOCK 1#
          ]
          result := x
        }

        m9s_exception_pod_and_image(pod, container) = result {
          x :=
          [
          # START M9S EXCEPTION BLOCK 2#
          {true, true}
          # END M9S EXCEPTION BLOCK 2#
          ]
          result := x
        }

        violation[{"msg": msg}] {
          result_from_pod := m9s_exception_pod(input.review.object)
          check := [x | x := result_from_pod[_]; x == true]
          not count(check) > 0
          msg := sprintf("This image namespace is not in m9sweeper exception list: %v.", [check])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          result_from_pod_and_image := m9s_exception_pod_and_image(input.review.object, container)
          check := [x | x := result_from_pod_and_image[_]; x == {true, true}]
          not count(check) > 0
          msg := sprintf("This image name and namespace is not in m9sweeper exception list: %v.", [check])
        }

        violation[{"msg": msg}] {
          input.review.object.kind == "Ingress"
          re_match("^(extensions|networking.k8s.io)/", input.review.object.apiVersion)
          ingress := input.review.object
          not https_complete(ingress)
          msg := sprintf("Ingress should be https. tls configuration and allow-http=false annotation are required for %v", [ingress.metadata.name])
        }

        https_complete(ingress) = true {
          ingress.spec["tls"]
          count(ingress.spec.tls) > 0
          ingress.metadata.annotations["kubernetes.io/ingress.allow-http"] == "false"
        }
